Fixed merge issues and added pass visibility, properly styled signup page, added body color and added js script for showing the password

--- a/Property-Project-Frontend/src/styles.css
+++ b/Property-Project-Frontend/src/styles.css
@@ -11,23 +11,21 @@
     font-weight: bold;
 }
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width:100%;
-    height: 40px;
-    height: 2.5rem;
-    background-color: #2c3e50;
-    text-align: center;
-    color: white;
-}
-.pageHeader {
-    color: green;
-}
-
 .formStyle{
     width: 80%;
     margin: auto;
     margin-top: 2%;
+    margin-bottom: 40px;
     text-align: center;
+}
+
+.pageHeader {
+    color: green;
+}
+
+.footer {
+    background-color: #2c3e50;
+    text-align: center;
+    color: white;
+    height: 55px;
 }
